Using a smaller loader image to avoid the issue with overflow

--- a/assets/css/mpp-core.css
+++ b/assets/css/mpp-core.css
@@ -832,3 +832,7 @@ ul.mpp-activity-media-item-list li a {
 	text-decoration: none;
 }
 
+#mpp-loader-wrapper {
+	text-align: center;
+	padding-top: 22px;
+}
